--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name</title>
+    <title>Sankirna Joshi</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -28,6 +28,6 @@
 <body>
     <h1>Your Name</h1>
     <p>Welcome to my personal website!</p>
-    <a href="https://www.linkedin.com/in/yourprofile" target="_blank">Connect with me on LinkedIn</a>
+    <a href="https://www.linkedin.com/in/sankirna" target="_blank">Connect with me on LinkedIn</a>
 </body>
 </html>
