--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <h1>Your Name</h1>
+    <h1>Sankirna Joshi</h1>
     <p>Welcome to my personal website!</p>
     <a href="https://www.linkedin.com/in/sankirna" target="_blank">Connect with me on LinkedIn</a>
 </body>
