--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 50px;
+            background-color: #f4f4f4;
         }
         h1 {
             color: #333;
+            animation: fadeIn 2s ease-in-out;
         }
         a {
             display: inline-block;
@@ -19,15 +21,45 @@
             font-size: 18px;
             color: #0073b1;
             text-decoration: none;
+            transition: transform 0.3s ease-in-out;
         }
         a:hover {
             text-decoration: underline;
+            transform: scale(1.1);
+        }
+        .profile-pic {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-top: 20px;
+        }
+        .network-animation {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(circle, rgba(0,0,0,0.1) 10%, transparent 70%);
+            pointer-events: none;
+            animation: pulse 5s infinite;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes pulse {
+            0% { opacity: 0.3; transform: scale(1); }
+            50% { opacity: 0.6; transform: scale(1.1); }
+            100% { opacity: 0.3; transform: scale(1); }
         }
     </style>
 </head>
 <body>
+    <div class="network-animation"></div>
     <h1>Sankirna Joshi</h1>
-    <p>Welcome to my personal website!</p>
-    <a href="https://www.linkedin.com/in/sankirna" target="_blank">Connect with me on LinkedIn</a>
+    <img src="https://media.licdn.com/dms/image/v2/C4E03AQG951nXpW9UMA/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1610737349282?e=1745452800&v=beta&t=CwpwEwy7BuXIOx2e9sGPpmDOVh7GqPI4q09xrUUU8qo" alt="Profile Picture" class="profile-pic">
+    <p>I'm a Data Science Manager working at Expedia Group. I have 10+ years of experience in data science, ML, and product analytics. I excel at defining and driving data science strategies to solve complex and cross-functional business problems and influencing stakeholders with data-driven insights. In my free time, I love to play sports, read fiction, and go on an occasiona hike.  </p>
+    <a href="https://www.linkedin.com/in/yourprofile" target="_blank">Connect with me on LinkedIn</a>
 </body>
 </html>
