--- a/index.html
+++ b/index.html
@@ -7,59 +7,114 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: radial-gradient(circle, #0f0c29, #302b63, #24243e);
+            color: white;
             text-align: center;
-            margin: 50px;
-            background-color: #f4f4f4;
+            overflow: hidden;
         }
-        h1 {
-            color: #333;
-            animation: fadeIn 2s ease-in-out;
+        .container {
+            position: relative;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.7);
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
         }
-        a {
-            display: inline-block;
-            margin-top: 20px;
-            font-size: 18px;
-            color: #0073b1;
-            text-decoration: none;
-            transition: transform 0.3s ease-in-out;
-        }
-        a:hover {
-            text-decoration: underline;
-            transform: scale(1.1);
-        }
-        .profile-pic {
+        img {
             width: 150px;
             height: 150px;
             border-radius: 50%;
-            object-fit: cover;
-            margin-top: 20px;
+            border: 3px solid white;
         }
-        .network-animation {
+        a {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 10px 20px;
+            background: #ff0080;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+        a:hover {
+            background: #d40060;
+        }
+        .background-animation {
             position: absolute;
-            top: 0;
-            left: 0;
             width: 100%;
             height: 100%;
-            background: radial-gradient(circle, rgba(0,0,0,0.1) 10%, transparent 70%);
-            pointer-events: none;
-            animation: pulse 5s infinite;
+            top: 0;
+            left: 0;
+            z-index: -1;
         }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
+        .circle {
+            position: absolute;
+            width: 30px;
+            height: 30px;
+            background: rgba(173, 216, 230, 0.6);
+            border-radius: 50%;
+            animation: move 10s infinite alternate ease-in-out;
+            cursor: pointer;
+            box-shadow: 0 0 10px rgba(173, 216, 230, 0.8);
         }
-        @keyframes pulse {
-            0% { opacity: 0.3; transform: scale(1); }
-            50% { opacity: 0.6; transform: scale(1.1); }
-            100% { opacity: 0.3; transform: scale(1); }
+        @keyframes move {
+            from {
+                transform: translateY(0px);
+            }
+            to {
+                transform: translateY(100px);
+            }
+        }
+        .location {
+            margin-top: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .location img {
+            width: 20px;
+            height: 20px;
+            margin-right: 5px;
         }
     </style>
 </head>
 <body>
-    <div class="network-animation"></div>
-    <h1>Sankirna Joshi</h1>
-    <img src="https://media.licdn.com/dms/image/v2/C4E03AQG951nXpW9UMA/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1610737349282?e=1745452800&v=beta&t=CwpwEwy7BuXIOx2e9sGPpmDOVh7GqPI4q09xrUUU8qo" alt="Profile Picture" class="profile-pic">
-    <p>I'm a Data Science Manager working at Expedia Group. I have 10+ years of experience in data science, ML, and product analytics. I excel at defining and driving data science strategies to solve complex and cross-functional business problems and influencing stakeholders with data-driven insights. In my free time, I love to play sports, read fiction, and go on an occasiona hike.  </p>
-    <a href="https://www.linkedin.com/in/yourprofile" target="_blank">Connect with me on LinkedIn</a>
+    <div class="background-animation" id="background">
+        <div class="circle" style="top: 10%; left: 20%; animation-duration: 6s;"></div>
+        <div class="circle" style="top: 50%; left: 70%; animation-duration: 8s;"></div>
+        <div class="circle" style="top: 30%; left: 40%; animation-duration: 10s;"></div>
+        <div class="circle" style="top: 80%; left: 10%; animation-duration: 12s;"></div>
+    </div>
+    <div class="container">
+        <img src="/assets/images/profile-image.png" alt="Your Name">
+        <h1>Sankirna Joshi</h1>
+        <p>Data Science Professional | Passionate about AI & Analytics</p>
+        <div class="location">
+            <img src="/assets/images/location-icon.png" alt="Location">
+            <span>Seattle, WA</span>
+        </div>
+        <a href="https://www.linkedin.com/in/sankirna" target="_blank">Connect with me on LinkedIn</a>
+    </div>
+    <script>
+        document.querySelectorAll('.circle').forEach(circle => {
+            circle.addEventListener('click', function() {
+                this.style.display = 'none';
+                for (let i = 0; i < 3; i++) {
+                    let smallBubble = document.createElement('div');
+                    smallBubble.classList.add('circle');
+                    smallBubble.style.width = '15px';
+                    smallBubble.style.height = '15px';
+                    smallBubble.style.top = (parseInt(this.style.top) + Math.random() * 20 - 10) + '%';
+                    smallBubble.style.left = (parseInt(this.style.left) + Math.random() * 20 - 10) + '%';
+                    document.getElementById('background').appendChild(smallBubble);
+                }
+            });
+        });
+    </script>
 </body>
 </html>
