Form fix index.html

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
         <div class="lightbox-content">
             <button class="lightbox-close" onclick="closeContactForm()">&times;</button>
             <h2 style="margin-bottom: 2rem;">Contact Me</h2>
-            <form class="contact-form" action="https://formspree.io/f/sankirna1292@gmail.com" method="POST">
+            <form class="contact-form" action="https://formspree.io/f/xjgbzbwd" method="POST">
                 <div class="form-group">
                     <label for="name">Name <span style="color: red;">*</span></label>
                     <input type="text" id="name" name="name" required>
