dynamic icon size index.html

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         }
 
         .icon-link {
-            width: 40px;
-            height: 40px;
+            width: clamp(50px, 5vw, 70px);
+            height: clamp(50px, 5vw, 70px);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -91,8 +91,8 @@
         }
 
         .icon-link svg {
-            width: 24px;
-            height: 24px;
+            width: clamp(32px, 3.5vw, 48px);
+            height: clamp(32px, 3.5vw, 48px);
         }
 
         .btn-resume {
