--- a/index.html
+++ b/index.html
@@ -113,20 +113,29 @@
 
         .hero {
             position: relative;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            width: 100%;
+            max-height: 70vh;
             overflow: hidden;
+            margin-top: 80px;
         }
 
         .hero-image {
-            position: absolute;
-            top: 0;
-            left: 0;
             width: 100%;
-            height: 100%;
+            height: auto;
+            display: block;
             object-fit: cover;
+            max-height: 70vh;
+        }
+
+        @media (max-width: 768px) {
+            .hero {
+                margin-top: 60px;
+                max-height: 50vh;
+            }
+            
+            .hero-image {
+                max-height: 50vh;
+            }
         }
 
         section {
@@ -307,7 +316,7 @@
     </header>
 
     <section class="hero">
-        <img src="https://images.squarespace-cdn.com/content/v1/694b1285ec3857441c0c5b9c/177f940f-4daf-48d7-8433-1b81cd9bc352/20251127_152954%7E3_Original.jpg" alt="Sankirna Joshi" class="hero-image">
+        <img src="/assets/images/20251127_152954~3_Original.jpg" alt="Sankirna Joshi" class="hero-image">
     </section>
 
     <section class="intro">
