Add padding to text section

--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
             display: grid;
             grid-template-columns: 1fr;
             gap: 3rem;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 8vw;            
         }
 
         .section-label {
@@ -161,6 +164,9 @@
             grid-template-columns: 1fr 2fr;
             gap: 4rem;
             align-items: start;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 8vw;            
         }
 
         blockquote {
@@ -233,6 +239,11 @@
             .two-column {
                 grid-template-columns: 1fr;
                 gap: 2rem;
+                padding: 0 6vw;
+            }
+
+            .intro {
+                padding: 0 6vw;                
             }
 
             section {
