--- a/index.html
+++ b/index.html
@@ -306,6 +306,15 @@
         }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R8VMRWB5D9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R8VMRWB5D9');
+</script>    
 <body>
     <header id="header">
         <a href="#" class="header-title">Sankirna Joshi</a>
